agregue seccion 2 y 3, corregi errores

--- a/index.html
+++ b/index.html
@@ -26,42 +26,70 @@
       </section>
       <section class="seccion2">
         <div class="div-dentro-seccion2"> 
-        <h6>Hi, I'm Jony. <br> Nice to meet you!</h6>
-        <p class="descripcion"> I started my career when I finished my studies at school. <br>
-          Since then I have focused on training and getting the best out of me in what I am passionate about. 
-          <br>I am responsible, committed and perseverant.</p>          
+            <h6>Hi, I'm Jony. <br> Nice to meet you!</h6>
+            <p class="descripcion"> I started my career when I finished my studies at school. <br>
+                Since then I have focused on training and getting the best out of me in what I am passionate about. 
+                <br>I am responsible, committed and perseverant.</p>          
         </div>
         <div class="row" id="cartas-div">
-          <div class="col-md-6 mb-4">
-            <div class="card">             
-              <div class="card-body">
-                <h5 class="card-title">Technical Bachelor with Orientation in Informatics and Digital Media</h5>
-                <p class="card-text">Finished in 2013 at ORT, Argentina.</p>
-              </div>
+            <div class="col-12 col-sm-6 mb-4">
+                <div class="card carta-animada" id="carta1">             
+                    <div class="card-body">
+                        <h5 class="card-title">Technical Bachelor with Orientation in Informatics and Digital Media</h5>
+                        <p class="card-text">Finished in 2013 at ORT, Argentina.</p>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="col-md-6 mb-4">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Bachelor's + Master's in Computer Science  </h5>
-                <p class="card-text">Currently working on my final NLP/Speech based thesis which is about labeling transitions in human-human conversations.
-                  <br> In progress at UBA, Argentina.
-                </p>
-              </div>
+            <div class="col-12 col-sm-6 mb-4">
+                <div class="card carta-animada" id="carta2">
+                    <div class="card-body">
+                        <h5 class="card-title">Bachelor's + Master's in Computer Science  </h5>
+                        <p class="card-text">Currently working on my final NLP/Speech based thesis which is about labeling transitions in human-human conversations.
+                            <br> In progress at UBA, Argentina.
+                        </p>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <img src="iconos/coding_10107133.png" class="img-fluid" alt="Imagen 1">
+    </section>
+    <section class="seccion3">
+      <section class="seccion3">
+        <h6 class="titulo-seccion2">Experiences</h6>
+        <div class="row cartas-experiencias"> <!-- Agregamos la clase "row" para que las cartas estén en una fila -->
+            <div class="col-md-4 mb-4"  id="contieneacarta"> <!-- Cada carta ocupa 4 columnas en dispositivos medianos y superiores -->
+              <div class="card carta-experiencia">
+                <h4 class="card-header">2021 - 2024</h4>
+                    <div class="card-body">
+                        <h5 class="card-title">Lead Software Engineer at ASAPP</h5>
+                        <p class="card-text">Working as a backend engineer in the team responsible for services related to AI config and user authentication/authorization (Go + TypeScript)</p>
+                        <a href="https://www.asapp.com/" class="btn" id="botones">Go to ASAPP</a>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6">
-              <img src="iconos/programmer_1442903.png" class="img-fluid" alt="Imagen 2">
+            <div class="col-md-4 mb-4"  id="contieneacarta">
+              <div class="card carta-experiencia">
+                <h4 class="card-header">2019 - 2021</h4>
+                    <div class="card-body">
+                        <h5 class="card-title">Software Engineer at Medallia</h5>
+                        <p class="card-text">Worked as a backend engineer in multiple applications (Java), actively working on an anti-cheating app for detecting fraudulent surveys (Java + Python + Vue).</p>
+                        <a href="https://www.medallia.com/es/" class="btn"id="botones">Go to Medallia</a>
+                    </div>
+                </div>
             </div>
-          </div>
+            <div class="col-md-4 mb-4" id="contieneacarta">
+                <div class="card carta-experiencia">
+                    <h4 class="card-header">2014 - 2016</h4>
+                    <div class="card-body">
+                        <h5 class="card-title">Software Engineer at Despegar</h5>
+                        <p class="card-text">Worked on process automation (Java) and web application development from scratch (Java + JSF) to be used by the HR department.</p>
+                        <a href="https://www.despegar.com.ar/" class="btn"id="botones">Go to Despegar</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </section>
+    </section>
+
+
     <script src="archivo.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
