--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
           <div class="col-md-4 mb-4" class="contieneacarta"> <!-- Cada carta ocupa 4 columnas en dispositivos medianos y superiores -->
               <div class="card carta-experiencia">
-                <h4 class="card-header"> Ago 2021 - 2024</h4>
+                <h4 class="card-header"> Ago 2021 - Actually</h4>
                     <div class="card-body">
                         <h5 class="card-title">Lead Software Engineer at ASAPP</h5>
                         <p class="card-text">Working as a backend engineer in the team responsible for services related to AI config and user authentication/authorization (Go + TypeScript).</p>
