agregué logos de las univ y de los trabajos, agrandé nav

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Technical Bachelor with Orientation in Informatics and Digital Media</h5>
                         <p class="card-text">Finished in 2013 at ORT, Argentina.</p>
+                        <img src="iconos/ort.jpg.png" class="logo-ort">
                     </div>
                 </div>
             </div>
@@ -47,6 +48,7 @@
                         <p class="card-text">Currently working on my final NLP/Speech based thesis which is about labeling transitions in human-human conversations.
                             <br> In progress at UBA, Argentina.
                         </p>
+                        <img src="iconos/uba.png" class="logo-uba">
                     </div>
                 </div>
             </div>
@@ -90,13 +92,22 @@
                     </div>
                 </div>
             </div>
+            <div class="logos-de-empresas">
+                <img src="iconos/despegar.png" class="logoexperiencia1">
+                <img src="iconos/Medallia.png" class="logoexperiencia2">
+                <img src="iconos/asapp_Logo.png"class="logoexperiencia3">
+            </div>
             
 
         </div>
     </section>
+    <section class="seccion4">
+
+    </section>
 
 
     <script src="archivo.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
