agregué botón del formulario

--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
             <button class="btn btn-outline-success my-2 my-sm-0 ml-auto" id="boton-say-hello" type="submit">Say Hello</button>
             
         </div>
+        <div class="overlay" id="overlay"></div>
+
+  <div class="contact-form" id="contact-form">
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">E-Mail:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" required></textarea>
+
+      <button type="submit">Send</button>
+    </form>
+  </div>
+
       </nav>
       <section class="seccion1">
         <div class="div-dentro-seccion1"> 
