--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Jonathan Scherman Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">    
     <link rel="stylesheet" href="estilos.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light ml-auto" id="nav-bar">
@@ -104,6 +108,48 @@
     </section>
     <section class="seccion4">
 
+    <div class="marquee-container">
+            <h6 id="titulo-seccion4" class="animate__animated animate__fadeInDown"> SKILLS</h6>
+            <h5 class="subtitulo-skills">I have so many skills</h5>
+        <ul class="skills-list">
+            <li>HTML</li>
+            <li>SASS</li>
+            <li>CSS</li>
+            <li>React.js</li>
+            <li>Node.js</li>
+            <li>JQuery</li>
+            <li>Haskell</li>
+            <li>Java</li>
+            <li>JavaScript</li>
+            <li>C++</li>
+            <li>Linux</li>
+            <li>Test Automation</li>
+            <li>Process Automation</li>
+            <li>Web Development</li>
+            <li>Android Development</li>
+            <li>MongoDB</li>
+            <li>SQL</li>
+            <li>Database Administration</li>
+            <li>Server Administration</li>
+            <li>Continuous Integration</li>
+            <li>Software Design</li>
+            <li>RESTful Web Services</li>
+            <li>Algorithm Design</li>
+            <li>Object Oriented Programming</li>
+            <li>Functional Programming</li>
+            <li>Event Driven Programming</li>
+            <li>Logging</li>
+            <li>Version Control</li>
+            <li>AngularJS 2</li>
+            <li>Python</li>
+            <li>Blockchain</li>
+            <li>Data Structures</li>
+            <li>Go</li>
+            <li>Kubernetes</li>
+            <li>Docker</li>
+        </ul>
+    </div>
+        </div>
     </section>
 
 
