problemas de responsive solucionados

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
       </nav>
       <section class="seccion1">
         <div class="div-dentro-seccion1"> 
-        <h1>Backend Developer & Sofware Engineer</h1>
+        <h1>BACKEND DEVELOPER & SOFWARE ENGINEER</h1>
         <h2>I'm Jonathan Scherman</h2>
       </div>
         <img src="imagenes/JONY3.png" id="jony-foto">
       </section>
       <section class="seccion2">
         <div class="div-dentro-seccion2"> 
-            <h6>Hi, I'm Jony. <br> Nice to meet you!</h6>
+            <h6>HI, I'M JONY. <br> Nice to meet you!</h6>
             <p class="descripcion"> I started my career when I finished my studies at school. <br>
                 Since then I have focused on training and getting the best out of me in what I am passionate about. 
                 <br>I am responsible, committed and perseverant.</p>          
@@ -61,7 +61,8 @@
     </section>
     <section class="seccion3">
       <section class="seccion3">
-        <h6 class="titulo-seccion2">Experiences</h6>
+        <h6 class="titulo-seccion2">MORE THAN <span class="span-titulo">8</span> YEARS 
+         OF EXPERIENCE IN BACKEND DEVELOPMENT</h6>
         
         <div class="row cartas-experiencias" id="cartas-experiencias-contenedor"> <!-- Agregamos la clase "row" para que las cartas estén en una fila -->
           
@@ -109,8 +110,21 @@
     <section class="seccion4">
 
     <div class="marquee-container">
-            <h6 id="titulo-seccion4" class="animate__animated animate__fadeInDown"> SKILLS</h6>
-            <h5 class="subtitulo-skills">I have so many skills</h5>
+            <h6 id="titulo-seccion4" class="animate__animated animate__fadeInDown"> SKILLS & CAPABILITIES</h6>
+                <ul class="habilidades-lista">
+                    <li class="skills-lista2"><span>&#10003;</span> Ability to work as part of a team.</li>
+                <li class="skills-lista2"><span>&#10003;</span>
+                    Leadership.</li>
+                <li class="skills-lista2"><span>&#10003;</span>
+                    Relationship-building.</li>
+                <li class="skills-lista2"><span>&#10003;</span>
+                    Empathy.</li>
+                <li class="skills-lista2"><span>&#10003;</span>
+                    Responsibility and commitment.</li>
+                <li class="skills-lista2"><span>&#10003;</span>
+                    Dedication and new proposals.</li>
+              </ul>
+              <div class="marquee-container2">   
         <ul class="skills-list">
             <li>HTML</li>
             <li>SASS</li>
@@ -149,7 +163,7 @@
             <li>Docker</li>
         </ul>
     </div>
-        </div>
+    </div>
     </section>
 
 
