corregí altura logo de ort

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="card carta-animada flex-column d-flex align-items-stretch" id="carta1">             
                     <div class="card-body">
                         <h5 class="card-title">Technical Bachelor with Orientation in Informatics and Digital Media</h5>
-                        <p class="card-text">Finished in 2013 at ORT, Argentina.</p>
+                        <p class="card-text">Finished in 2013 at ORT, Argentina.<br>  <br></p>
                         <img src="iconos/ort.jpg.png" class="logo-ort">
                     </div>
                 </div>
