corrección ruta imagen de jony final

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                        <img src="/imagenes/JONY3.png" id=jony-foto-final alt="Jony foto">
+                        <img src="imagenes/JONY3.png" id=jony-foto-final alt="Jony foto">
                 </figure>
             </div>
             <div class="box">
